# mimir

./: Cargo.toml  DESIGN.md  GIANTS.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/mimir-bayes/: Cargo.toml
crates/mimir-bayes/src/: inference.rs  lib.rs  network.rs  node.rs
crates/mimir-cli/: Cargo.toml
crates/mimir-cli/src/: main.rs
crates/mimir-dst/: Cargo.toml
crates/mimir-dst/src/: config.rs  engine.rs  error.rs  lib.rs
crates/mimir-entropy/: Cargo.toml
crates/mimir-entropy/proptest-regressions/: ncd.txt
crates/mimir-entropy/src/: differential.rs  lib.rs  ncd.rs  shannon.rs
crates/mimir-fisher/: Cargo.toml
crates/mimir-fisher/src/: lib.rs
crates/mimir-gen/: Cargo.toml
crates/mimir-gen/src/: covering.rs  generator.rs  lib.rs  values.rs
crates/mimir-graph/: Cargo.toml
crates/mimir-graph/src/: analysis.rs  centrality.rs  lib.rs  paths.rs  scc.rs  type_graph.rs
crates/mimir-lamport/: Cargo.toml
crates/mimir-lamport/src/: clock.rs  detector.rs  lib.rs  race.rs
crates/mimir-markov/: Cargo.toml
crates/mimir-markov/src/: analysis.rs  chain.rs  lib.rs  steady_state.rs
crates/mimir-mdp/: Cargo.toml
crates/mimir-mdp/src/: explorer.rs  lib.rs  state.rs  strategy.rs
crates/mimir-oracle/: Cargo.toml
crates/mimir-oracle/src/: checker.rs  error.rs  finding.rs  lib.rs  properties.rs
crates/mimir-report/: Cargo.toml
crates/mimir-report/src/: json_report.rs  lib.rs  pretty.rs  report.rs  sarif.rs
crates/mimir-schema/: Cargo.toml
crates/mimir-schema/src/: error.rs  introspection.rs  lib.rs  types.rs
crates/mimir-shrink/: Cargo.toml
crates/mimir-shrink/src/: lib.rs  result.rs  sequence.rs  shrinker.rs
crates/mimir-transport/: Cargo.toml
crates/mimir-transport/src/: capture.rs  client.rs  error.rs  lib.rs
crates/mimir-wald/: Cargo.toml
crates/mimir-wald/src/: config.rs  lib.rs  sprt.rs
