[package]
name = "mimir-bayes"
description = "Bayesian vulnerability network — probabilistic reasoning about compound security risks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
