[package]
name = "mimir-cli"
description = "CLI for mimir -- deterministic GraphQL security auditor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mimir"
path = "src/main.rs"

[dependencies]
mimir-schema = { workspace = true }
mimir-graph = { workspace = true }
mimir-gen = { workspace = true }
mimir-dst = { workspace = true }
mimir-transport = { workspace = true }
mimir-entropy = { workspace = true }
mimir-report = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
