[package]
name = "mimir-fisher"
description = "Fisher's exact test — statistical significance for differential authorization analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
