[package]
name = "mimir-gen"
description = "Grammar-aware GraphQL query and mutation generator with covering arrays"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimir-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
