[package]
name = "mimir-graph"
description = "Graph theory analysis for GraphQL schemas — centrality, SCC, paths, min-cuts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimir-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
