[package]
name = "mimir-lamport"
description = "Lamport happens-before race detection for concurrent GraphQL mutations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
