[package]
name = "mimir-report"
description = "Security report generation — SARIF, JSON, and human-readable output"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimir-schema = { workspace = true }
mimir-oracle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
